--- a/login.html
+++ b/login.html
@@ -219,32 +219,25 @@
 
   /* Gradiente animado */
   background: linear-gradient(
-    90deg,
-    #ff416c,
-    #ff4b2b,
-    #1a73e8,
-    #00c6ff,
-    #ff416c
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 300% 300%;
+      120deg,
+      transparent,
+      rgba(255,255,255,0.9),
+      transparent
+    );
+    background-size: 200% 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 5s infinite linear;
+  
 
   animation: spinX 1.2s linear infinite, shine 3s ease infinite;
 }
 
-@keyframes spinX {
-  0% { transform: rotate(0deg) scale(1); }
-  25% { transform: rotate(90deg) scale(1.2); }
-  50% { transform: rotate(180deg) scale(1); }
-  75% { transform: rotate(270deg) scale(1.2); }
-  100% { transform: rotate(360deg) scale(1); }
-}
+
 
 @keyframes shine {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+ 0%   { background-position: 200% 0; }   /* 👉 arranca a la derecha */
+  100% { background-position: -200% 0; }  /* 👉 termina a la izquierda */
 }
 
 
