--- a/login.html
+++ b/login.html
@@ -262,7 +262,7 @@
       <label for="email">Recupera tu contraseña:</label>
       <input type="email" id="recuperarEmail" placeholder="Tu email">
       <button onclick="recuperarClave()">Enviar</button>
-      <div class="spinner" id="spinnerRecuperar">X</div>
+      <div class="spinnerX" id="spinnerRecuperar">X</div>
     </div>
   </div>
 <div id="toast"></div>
@@ -289,7 +289,7 @@ async function login() {
       showToast("¡Vamos!");
       window.location.href = "/panel.html";
     } else {
-      showToast("Ups<br>Fijate bien el email y la clave");
+      showToast("Ups! Fijate bien el email y la clave");
     }
   } catch (error) {
     showToast("Error de conexión");
@@ -300,34 +300,45 @@ async function login() {
 }
 
     
-    function mostrarRecuperar(){
+    function mostrarRecuperar() {
   document.getElementById("recuperarDiv").style.display = "block";
 }
 
-async function recuperarClave(){
+async function recuperarClave() {
   const email = document.getElementById("recuperarEmail").value.trim();
+  const spinner = document.getElementById("spinnerRecuperar");
+
   if (!email) {
-    alert("Ingresá tu email");
+    showToast("Ingresá tu email");
     return;
   }
-document.getElementById("spinnerRecuperar").style.display = "block"; // antes de enviar
-  const res = await fetch(`${API_URL}`, {
-    method: "POST",
-    body: new URLSearchParams({
-      action: "recoverPassword",
-      email: email
-    })
-  });
 
-  const data = await res.json();
-  if (data.status === "ok") {
-    document.getElementById("spinnerRecuperar").style.display = "none";  // después de recibir respuesta
-  showToast("Te enviamos tu contraseña al correo ingresado."); 
-} else {
-  showToast(data.msg || "No encontramos tu email."); 
-} 
-  } 
+  spinner.style.display = "block"; // mostrar X spinner
 
+  try {
+    const res = await fetch(API_URL, {
+      method: "POST",
+      body: new URLSearchParams({
+        action: "recoverPassword",
+        email: email
+      })
+    });
+
+    const data = await res.json();
+
+    if (data.status === "ok") {
+      showToast("Ya enviamos la contraseña al mail");
+    } else {
+      showToast("Ups! No encontramos tu email.");
+    }
+
+  } catch (error) {
+    showToast("Error de conexión");
+    console.error(error);
+  } finally {
+    spinner.style.display = "none"; // ✅ siempre se oculta
+  }
+}
 
 function showToast(message) {
   const toast = document.getElementById("toast");
