--- a/register.html
+++ b/register.html
@@ -166,6 +166,7 @@
       <button type="submit">Registrarme</button> 
       <div id="msg"></div> 
     </form>
+    <div id="msg"></div> 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbyPQ3FCCUIGJPzsC7CepvT9BISkBqL_4exc2-Ukrb1rMX9scdryBvZdjJ11rznkUMvE-A/exec";
 // 🔹 Transformar el username en tiempo real
