--- a/register.html
+++ b/register.html
@@ -164,7 +164,7 @@
       <input type="text" id="username" placeholder="nombreDeTuNegocio" required> 
       <span class="web">Tu "nombre de negocio" será "tu link" ej: www.turnox.pro/peluquitos o www.turnox.pro/hair-studio.</span>
       <button type="submit">Registrarme</button> 
-      <div id="msg"></div> 
+      
     </form>
     <div id="msg"></div> 
   <script>
@@ -215,7 +215,9 @@
   msg.style.color = "white";
   msg.innerHTML = `
     Cuenta creada con éxito. Tu página será www.turnox.pro/${data.username.toLowerCase()}<br>
-    <button id="ingresarPanel" style="margin-top:10px; padding:8px 16px; cursor:pointer;">Ingresar a mi panel de administrador</button>
+    Tu Usuario es:${data.email()}<br>
+    Tu Contraseña es:${data.password()}<br>
+    <button id="ingresarPanel" style="margin-top:10px; padding:8px 16px; cursor:pointer;">Ingresa a tu panel</button>
   `;
   document.getElementById("ingresarPanel").onclick = () => {
     window.location.href = `/panel.html?username=${encodeURIComponent(data.username.toLowerCase())}`;
