--- a/register.html
+++ b/register.html
@@ -215,8 +215,8 @@
   msg.style.color = "white";
   msg.innerHTML = `
     Cuenta creada con éxito. Tu página será www.turnox.pro/${data.username.toLowerCase()}<br>
-    Tu Usuario es:${data.email()}<br>
-    Tu Contraseña es:${data.password()}<br>
+    Tu Usuario es: ${data.email}<br>
+    Tu Contraseña es: ${data.password}<br>
     <button id="ingresarPanel" style="margin-top:10px; padding:8px 16px; cursor:pointer;">Ingresa a tu panel</button>
   `;
   document.getElementById("ingresarPanel").onclick = () => {
