--- a/register.html
+++ b/register.html
@@ -216,6 +216,7 @@
   msg.innerHTML = `
     Cuenta creada con éxito. Tu página será: <strong>www.turnox.pro/${data.username.toLowerCase()}</strong><br>
     <strong>Tu Usuario es: ${data.email}</strong><br>
+    Te enviamos un mail con los datos a: ${data.email}<br>
     
     <button id="ingresarPanel" style="margin-top:10px; padding:8px 16px; cursor:pointer;">Ingresa a tu sitio</button>
   `;
