--- a/register.html
+++ b/register.html
@@ -214,8 +214,8 @@
           
   msg.style.color = "white";
   msg.innerHTML = `
-    Cuenta creada con éxito. Tu página será: <strong>www.turnox.pro/${data.username.toLowerCase()}</strong><br>
-    <strong>Tu Usuario es: ${data.email}</strong><br>
+    Cuenta creada con éxito. Tu sitio es: <strong>www.turnox.pro/${data.username.toLowerCase()}</strong><br>
+    Tu Usuario es:<strong> ${data.email}</strong><br>
     Te enviamos un mail con los datos a: ${data.email}<br>
     
     <button id="ingresarPanel" style="margin-top:10px; padding:8px 16px; cursor:pointer;">Ingresa a tu sitio</button>
