--- a/register.html
+++ b/register.html
@@ -216,7 +216,8 @@
   msg.innerHTML = `
     Cuenta creada con éxito. Tu sitio es: <strong>www.turnox.pro/${data.username.toLowerCase()}</strong><br>
     Tu Usuario es:<strong> ${data.email}</strong><br>
-    Te enviamos un mail con los datos a: ${data.email}<br>
+    Enviamos un mail con los datos a:<strong> ${data.email}</strong><br>
+    Agregamos créditos gratis a tu cuenta:<strong>5 créditos</strong> para prueba.<br>
     
     <button id="ingresarPanel" style="margin-top:10px; padding:8px 16px; cursor:pointer;">Ingresa a tu sitio</button>
   `;
