--- a/username.html
+++ b/username.html
@@ -10,8 +10,8 @@
   * { box-sizing: border-box; margin:0; padding:0; }
   body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #533482;
-    color: #fff;
+    background-color: #f8f8f8;/* gris claro */
+    color: #575757;/* gris oscuro */
     padding: 20px;
     min-height: 100vh;
   }
