--- a/username.html
+++ b/username.html
@@ -151,7 +151,7 @@
 <body>
 
   <!-- Logo del usuario -->
-  <div class="logo-container" style="text-align:center; margin-bottom:20px;">
+  <div class="logo-container" style="largin-left:0px; margin-bottom:20px;">
     <img id="userLogo" src="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;">
   </div>
 
