--- a/username.html
+++ b/username.html
@@ -30,12 +30,13 @@
     padding: 10px 20px;
     margin: 10px 5px;
     font-weight: 600;
-    border-radius: 8px;
+    border-radius: 0px;
     cursor: pointer;
     transition: all 0.2s;
   }
   #prevMonth:hover, #nextMonth:hover {
-    background-color: #f2f2f2;
+     background-color: #f8f8f8;
+    color: #575757;
     transform: translateY(-2px);
   }
   #prevMonth, #nextMonth { display: inline-block; }
@@ -62,7 +63,7 @@
         );
     background-blend-mode: overlay;
     color: #575757;
-    border-radius: 10px;
+    border-radius: 0px;
     overflow: hidden;
     padding: 15px;
   }
