--- a/username.html
+++ b/username.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <!-- Fuentes -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
 
   <!-- Iconos -->
   <link rel="icon" type="image/png" href="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png">
@@ -27,21 +27,28 @@
   <meta name="twitter:title" content="TurnoX - Sistema PRE-PAGO de Turnos On Line" />
   <meta name="twitter:description" content="Turnero Pro." />
   <meta name="twitter:image" content="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" />
-
   <style>
-    html {
-  scroll-behavior: smooth;
-}
-   body {
-  font-family: "Montserrat", sans-serif;
+    /* Reset y estilos generales */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+      font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  margin: 0;
-  padding: 0;
-  background: #f8f8f8;
-  color: #533482;
-}
+      background-color: #533482;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+       margin: 0;
+      min-height: 100vh; /* ocupa toda la pantalla */
+    transition: background-color 1s ease-in-out; /* transición suave del fondo */
+    }
 
   h1 {
     text-align: center;
