--- a/username.html
+++ b/username.html
@@ -27,28 +27,20 @@
   <meta name="twitter:title" content="TurnoX - Sistema PRE-PAGO de Turnos On Line" />
   <meta name="twitter:description" content="Turnero Pro." />
   <meta name="twitter:image" content="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" />
-  <style>
-    /* Reset y estilos generales */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    html, body {
-      height: 100%;
-      font-family: "Montserrat", sans-serif;
+   <style>
+    html {
+  scroll-behavior: smooth;
+}
+   body {
+  font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-      background-color: #533482;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-       margin: 0;
-      min-height: 100vh; /* ocupa toda la pantalla */
-    transition: background-color 1s ease-in-out; /* transición suave del fondo */
-    }
+  margin: 0;
+  padding: 0;
+  background: #f8f8f8;
+  color: #533482;
+}
 
   h1 {
     text-align: center;
