--- a/username.html
+++ b/username.html
@@ -38,8 +38,8 @@
   font-style: normal;
   margin: 0;
   padding: 0;
-  background: #f8f8f8;
-  color: #533482;
+  background: #533482;
+  color: #f8f8f8;
 }
 
   h1 {
