--- a/username.html
+++ b/username.html
@@ -182,12 +182,29 @@
     <img id="userLogo" src="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;">
   </div>
 
-  <div>
-    <button id="prevMonth">← Mes anterior</button>
-    <button id="nextMonth">Mes siguiente →</button>
-  </div>
+  
 
   <div id="calendario"></div>
+ <div style="display:flex; gap:10px; align-items:center;">
+  <!-- Botón Mes anterior -->
+  <button id="prevMonth" style="display:flex; align-items:center; gap:6px; padding:8px 12px; background:#fff; border:1px solid #ccc; border-radius:6px; cursor:pointer;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 60 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter">
+      <line x1="58" y1="12" x2="8" y2="12"></line>
+      <polyline points="16,4 2,12 16,20"></polyline>
+    </svg>
+    Mes anterior
+  </button>
+
+  <!-- Botón Mes siguiente -->
+  <button id="nextMonth" style="display:flex; align-items:center; gap:6px; padding:8px 12px; background:#fff; border:1px solid #ccc; border-radius:6px; cursor:pointer;">
+    Mes siguiente
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 60 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter">
+      <line x1="2" y1="12" x2="52" y2="12"></line>
+      <polyline points="44,4 58,12 44,20"></polyline>
+    </svg>
+  </button>
+</div>
+
   <div id="turnos"></div>
   <div id="reservaFormContainer" style="display:none;"></div>
 
