--- a/username.html
+++ b/username.html
@@ -39,7 +39,7 @@
   margin: 0;
   padding: 0;
   
-     background: linear-gradient(-90deg, #533482, #533482, #533482, #533482, #D14DEB, #533482, #533482, #533482, #533482);
+     background: linear-gradient(-90deg, #533482, #533482, #533482, #533482, #9073BA, #533482, #533482, #533482, #533482);
       background-size: 400% 400%;
       animation: gradienteMovimiento 6s ease infinite;
   color: #f8f8f8;
