--- a/username.html
+++ b/username.html
@@ -61,22 +61,8 @@
   #calendario {
     margin: 20px auto;
     max-width: 600px;
-    background: linear-gradient(
-            135deg,
-            #d0d0d0 0%, 
-            #f0f0f0 25%, 
-            #c0c0c0 50%, 
-            #e0e0e0 75%, 
-            #d0d0d0 100%
-        ),
-        repeating-linear-gradient(
-            0deg,
-            rgba(255,255,255,0.05) 0px,
-            rgba(255,255,255,0.05) 2px,
-            transparent 2px,
-            transparent 4px
-        );
-    background-blend-mode: overlay;
+    background: url("https://i.ibb.co/W4nX44vN/Generated-File-August-23-2025-5-32-PM.gif") center center no-repeat;
+  background-size: cover; /* hace que el gif se ajuste al contenedor */
     color: #575757;
     border-radius: 0px;
     overflow: hidden;
