--- a/username.html
+++ b/username.html
@@ -39,15 +39,8 @@
   margin: 0;
   padding: 0;
   
-     background: linear-gradient(-90deg, #533482, #533482, #533482, #533482, #9073BA, #533482, #533482, #533482, #533482);
-      background-size: 400% 400%;
-      animation: gradienteMovimiento 6s ease infinite;
-  color: #f8f8f8;
-}
-@keyframes gradienteMovimiento {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+     background: url("https://i.ibb.co/W4nX44vN/Generated-File-August-23-2025-5-32-PM.gif") center center no-repeat;
+  background-size: cover; /* hace que el gif se ajuste al contenedor */
     }
   h1 {
     text-align: center;
@@ -61,8 +54,8 @@
   #calendario {
     margin: 20px auto;
     max-width: 600px;
-    background: url("https://i.ibb.co/W4nX44vN/Generated-File-August-23-2025-5-32-PM.gif") center center no-repeat;
-  background-size: cover; /* hace que el gif se ajuste al contenedor */
+    background-color: #ffffff70;
+    
     color: #575757;
     border-radius: 0px;
     overflow: hidden;
