--- a/username.html
+++ b/username.html
@@ -38,9 +38,7 @@
   font-style: normal;
   margin: 0;
   padding: 0;
-  
-     background: url("https://i.ibb.co/YBBDv9dY/Generated-File-August-23-2025-6-34-PM.gif") center center no-repeat;
-  background-size: cover; /* hace que el gif se ajuste al contenedor */
+  background-color: #533482;
     }
   h1 {
     text-align: center;
@@ -55,7 +53,6 @@
     margin: 20px auto;
     max-width: 600px;
     background-color: #ffffff70;
-    
     color: #575757;
     border-radius: 0px;
     overflow: hidden;
