--- a/username.html
+++ b/username.html
@@ -53,7 +53,7 @@
   #calendario {
     margin: 20px auto;
     max-width: 600px;
-    background-color: #ffffff70;
+    background-color: #ffffff;
     color: #575757;
     border-radius: 0px;
     overflow: hidden;
