--- a/username.html
+++ b/username.html
@@ -62,7 +62,7 @@
   #calendario h2 { text-align: center; margin-bottom: 10px; text-transform: capitalize; }
   #calendario table { width: 100%; border-collapse: collapse; }
   #calendario th, #calendario td { width: 14.28%; text-align: center; padding: 10px 0; }
-  #calendario td:hover { background-color: #575757; cursor: pointer; border-radius: 0%; }
+  #calendario td:hover { border-color: #575757; cursor: pointer; border-radius: 0%; }
   #calendario td[style*="not-allowed"] { cursor: not-allowed; color: #999; }
 #calendario td.bloqueado {
   cursor: not-allowed;
