--- a/username.html
+++ b/username.html
@@ -64,11 +64,23 @@
   #calendario th, #calendario td { width: 14.28%; text-align: center; padding: 10px 0; }
   #calendario td:hover { border-color: #575757; cursor: pointer; border-radius: 0%; }
   #calendario td[style*="not-allowed"] { cursor: not-allowed; color: #999; }
+#calendario td.hoy {
+  border: 2px solid #575757;
+  border-radius: 50%;
+}
+
+#calendario td.seleccionado {
+  background-color: #533482;
+  color: #fff;
+  border-radius: 50%;
+}
+
 #calendario td.bloqueado {
   cursor: not-allowed;
   color: #999;
-  pointer-events: none; /* esto evita cualquier click */
+  pointer-events: none;
 }
+
   /* Turnos */
   .turnos {
     margin: 15px auto;
@@ -228,22 +240,54 @@ function renderCalendario(year, month) {
   diasSemana.forEach(d => table += `<th>${d}</th>`);
   table += "</tr><tr>";
 
-  for (let i=0;i<firstDay.getDay();i++) table += "<td></td>";
-  for (let d=1; d<=lastDay.getDate(); d++) {
+  for (let i = 0; i < firstDay.getDay(); i++) table += "<td></td>";
+
+  for (let d = 1; d <= lastDay.getDate(); d++) {
     const fecha = new Date(year, month, d);
     const fechaStr = fecha.toISOString().split("T")[0];
+
+    let clases = "";
+
+    // marcar día bloqueado (no se puede clickear)
     if (fecha < new Date(today.getFullYear(), today.getMonth(), today.getDate())) {
-  table += `<td class="bloqueado">${d}</td>`;
-} else {
-  table += `<td onclick="cargarTurnos('${fechaStr}')">${d}</td>`;
-}
-    if (fecha.getDay() === 6 && d!==lastDay.getDate()) table += "</tr><tr>";
+      clases = "bloqueado";
+      table += `<td class="${clases}">${d}</td>`;
+    } else {
+      // marcar día de hoy
+      if (
+        fecha.getFullYear() === today.getFullYear() &&
+        fecha.getMonth() === today.getMonth() &&
+        fecha.getDate() === today.getDate()
+      ) {
+        clases += (clases ? " " : "") + "hoy";
+      }
+
+      table += `<td class="${clases}" onclick="seleccionarDia(this, '${fechaStr}')">${d}</td>`;
+    }
+
+    if (fecha.getDay() === 6 && d !== lastDay.getDate()) table += "</tr><tr>";
   }
+
   table += "</tr></table>";
   calendarDiv.innerHTML += table;
 
-  document.getElementById("prevMonth").onclick = ()=>{ renderCalendario(year, month-1); };
-  document.getElementById("nextMonth").onclick = ()=>{ renderCalendario(year, month+1); };
+  // botones mes anterior/siguiente
+  document.getElementById("prevMonth").onclick = () => {
+    renderCalendario(year, month - 1);
+  };
+  document.getElementById("nextMonth").onclick = () => {
+    renderCalendario(year, month + 1);
+  };
+}
+
+// ------------------ SELECCIONAR DÍA ------------------
+function seleccionarDia(td, fechaStr) {
+  // quitar selección anterior
+  document.querySelectorAll("#calendario td.seleccionado").forEach(el => el.classList.remove("seleccionado"));
+  // marcar día seleccionado
+  td.classList.add("seleccionado");
+  // cargar turnos
+  cargarTurnos(fechaStr);
 }
 
 // ------------------ CARGAR TURNOS ------------------
