--- a/username.html
+++ b/username.html
@@ -53,7 +53,25 @@
   #calendario {
     margin: 20px auto;
     max-width: 600px;
-    background-color: #ffffff;
+    background: 
+        linear-gradient(
+            135deg,
+            #d0d0d0 0%, 
+            #f0f0f0 25%, 
+            #c0c0c0 50%, 
+            #e0e0e0 75%, 
+            #d0d0d0 100%
+        ),
+        repeating-linear-gradient(
+            0deg,
+            rgba(255,255,255,0.05) 0px,
+            rgba(255,255,255,0.05) 2px,
+            transparent 2px,
+            transparent 4px
+        );
+    background-blend-mode: overlay;
+  color: #533482;
+
     color: #575757;
     border-radius: 0px;
     overflow: hidden;
