--- a/username.html
+++ b/username.html
@@ -57,9 +57,9 @@
         linear-gradient(
             135deg,
             #D2B8FF 0%, 
-            #f0f0f0 25%, 
+            #fff 25%, 
             #E7D9FF 50%, 
-            #e0e0e0 75%, 
+            #fff 75%, 
             #D2B8FF 100%
         ),
         repeating-linear-gradient(
