--- a/username.html
+++ b/username.html
@@ -58,7 +58,7 @@
             135deg,
             #D2B8FF 0%, 
             #fff 25%, 
-            #E7D9FF 50%, 
+            #F4EDFF 50%, 
             #fff 75%, 
             #D2B8FF 100%
         ),
