--- a/username.html
+++ b/username.html
@@ -69,10 +69,10 @@
             transparent 2px,
             transparent 4px
         );
+   
     background-blend-mode: overlay;
-  color: #533482;
-
-    color: #575757;
+  color: #533482; 
+    
     border-radius: 0px;
     overflow: hidden;
     padding: 15px;
@@ -107,7 +107,24 @@
     background: #fff;
     color: #533482;
     padding: 15px;
-    border-radius: 10px;
+    border-radius:  background: 
+        linear-gradient(
+            135deg,
+            #D2B8FF 0%, 
+            #fff 25%, 
+            #F4EDFF 50%, 
+            #fff 75%, 
+            #D2B8FF 100%
+        ),
+        repeating-linear-gradient(
+            0deg,
+            rgba(255,255,255,0.05) 0px,
+            rgba(255,255,255,0.05) 2px,
+            transparent 2px,
+            transparent 4px
+        );
+   
+    background-blend-mode: overlay;0px;
   }
   .turnos h3 { margin-bottom: 10px; }
   .hora { display: inline-block; margin: 5px; padding: 8px 12px; border-radius: 6px; font-weight: 600; transition: all 0.2s; }
@@ -187,8 +204,8 @@
   <div id="calendario"></div>
 <div style="display:flex; gap:20px; align-items:center; justify-content:center;">
   <!-- Botón Mes anterior -->
-  <button id="prevMonth" style="display:flex; align-items:center; gap:6px; padding:0; background:none; border:none; color:#aaa; cursor:pointer; font-size:16px;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 60 24" fill="none" stroke="#aaa" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter">
+  <button id="prevMonth" style="display:flex; align-items:center; gap:6px; padding:0; background:none; border:none; color:#F4EDFF; cursor:pointer; font-size:16px;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 60 24" fill="none" stroke="#F4EDFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter">
       <line x1="58" y1="12" x2="8" y2="12"></line>
       <polyline points="16,4 2,12 16,20"></polyline>
     </svg>
@@ -196,9 +213,9 @@
   </button>
 
   <!-- Botón Mes siguiente -->
-  <button id="nextMonth" style="display:flex; align-items:center; gap:6px; padding:0; background:none; border:none; color:#aaa; cursor:pointer; font-size:16px;">
+  <button id="nextMonth" style="display:flex; align-items:center; gap:6px; padding:0; background:none; border:none; color:#F4EDFF; cursor:pointer; font-size:16px;">
     Mes siguiente
-    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 60 24" fill="none" stroke="#aaa" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 60 24" fill="none" stroke="#F4EDFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter">
       <line x1="2" y1="12" x2="52" y2="12"></line>
       <polyline points="44,4 58,12 44,20"></polyline>
     </svg>
