--- a/username.html
+++ b/username.html
@@ -107,7 +107,7 @@
     background: #fff;
     color: #533482;
     padding: 15px;
-    border-radius:  background: 
+     background: 
         linear-gradient(
             135deg,
             #D2B8FF 0%, 
@@ -124,7 +124,7 @@
             transparent 4px
         );
    
-    background-blend-mode: overlay;0px;
+    background-blend-mode: overlay;
   }
   .turnos h3 { margin-bottom: 10px; }
   .hora { display: inline-block; margin: 5px; padding: 8px 12px; border-radius: 6px; font-weight: 600; transition: all 0.2s; }
