--- a/username.html
+++ b/username.html
@@ -128,9 +128,9 @@
   }
   .turnos h3 { margin-bottom: 10px; }
   .hora { display: inline-block; margin: 5px; padding: 8px 12px; border-radius: 6px; font-weight: 600; transition: all 0.2s; }
-  .hora.disponible { background: #D2B8FF80; color: #533482; }
-  .hora.disponible:hover { background: #533482; color: #D2B8FF80;  cursor: pointer; transform: translateY(-2px); }
-  .hora.bloqueado { background: #D2B8FF80; color: #F4EDFF; cursor: not-allowed; text-decoration: line-through; opacity: 0.6; }
+  .hora.disponible { background: #D2B8FF95; color: #533482; }
+  .hora.disponible:hover { background: #533482; color: #fff;  cursor: pointer; transform: translateY(-2px); }
+  .hora.bloqueado { background: #D2B8FF95; color: #ccc; cursor: not-allowed; text-decoration: line-through; opacity: 0.6; }
 
   /* Formulario de reserva */
   #reservaFormContainer {
