--- a/username.html
+++ b/username.html
@@ -127,10 +127,10 @@
     background-blend-mode: overlay;
   }
   .turnos h3 { margin-bottom: 10px; }
-  .hora { display: inline-block; margin: 5px; padding: 8px 12px; border-radius: 6px; font-weight: 600; transition: all 0.2s; }
-  .hora.disponible { background: #D2B8FF95; color: #533482; }
+  .hora { display: inline-block; margin: 5px; padding: 8px 12px; border-radius: 0px; font-weight: 600; transition: all 0.2s; }
+  .hora.disponible { background: #aaa; color: #533482; }
   .hora.disponible:hover { background: #533482; color: #fff;  cursor: pointer; transform: translateY(-2px); }
-  .hora.bloqueado { background: #D2B8FF95; color: #ccc; cursor: not-allowed; text-decoration: line-through; opacity: 0.6; }
+  .hora.bloqueado { background: #D2B8FF95; color: #aaa; cursor: not-allowed; text-decoration: line-through; opacity: 0.6; }
 
   /* Formulario de reserva */
   #reservaFormContainer {
