--- a/username.html
+++ b/username.html
@@ -136,7 +136,24 @@
   #reservaFormContainer {
     margin: 20px auto;
     max-width: 600px;
-    background: #fff;
+    background: 
+        linear-gradient(
+            135deg,
+            #D2B8FF 0%, 
+            #fff 25%, 
+            #F4EDFF 50%, 
+            #fff 75%, 
+            #D2B8FF 100%
+        ),
+        repeating-linear-gradient(
+            0deg,
+            rgba(255,255,255,0.05) 0px,
+            rgba(255,255,255,0.05) 2px,
+            transparent 2px,
+            transparent 4px
+        );
+   
+    background-blend-mode: overlay;
     color: #533482;
     padding: 20px;
     border-radius: 10px;
@@ -157,7 +174,24 @@
     .ticket {
   margin: 20px auto;
   max-width: 500px;
-  background: #fff;
+  background: 
+        linear-gradient(
+            135deg,
+            #D2B8FF 0%, 
+            #fff 25%, 
+            #F4EDFF 50%, 
+            #fff 75%, 
+            #D2B8FF 100%
+        ),
+        repeating-linear-gradient(
+            0deg,
+            rgba(255,255,255,0.05) 0px,
+            rgba(255,255,255,0.05) 2px,
+            transparent 2px,
+            transparent 4px
+        );
+   
+    background-blend-mode: overlay;
   color: #333;
   padding: 20px;
   border-radius: 12px;
