--- a/username.html
+++ b/username.html
@@ -163,7 +163,7 @@
     border-radius: 10px;
   }
   #reservaForm input, #reservaForm textarea, #reservaForm button {
-    width: 100%; padding: 10px; margin: 8px 0; border-radius: 6px; border: 1px solid #ccc; font-family: 'Montserrat', sans-serif;
+    width: 90%; padding: 10px; margin: 8px 0; border-radius: 0px; border: 1px solid #ccc; font-family: 'Montserrat', sans-serif; text-align: center;
   }
   #reservaForm button {
     background-color: #533482; color: #fff; border: none; font-weight: 600; cursor: pointer; transition: all 0.2s;
