--- a/username.html
+++ b/username.html
@@ -464,7 +464,8 @@ function mostrarFormReserva() {
       <input type="text" name="apellido" placeholder="Apellido" required>
       <input type="tel" name="telefono" placeholder="Teléfono" required>
       <input type="text" name="direccion" placeholder="Dirección" required>
-      <input type="date" name="fechaNacimiento" placeholder="Fecha de nacimiento" required>
+      <label for="fechaNacimiento">Fecha de nacimiento</label>
+<input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="text" name="whatsapp" placeholder="Whatsapp" required>
       <input type="text" name="dni" placeholder="DNI" required>
