--- a/username.html
+++ b/username.html
@@ -477,7 +477,7 @@ function mostrarFormReserva() {
   const formContainer = document.getElementById("reservaFormContainer");
   formContainer.style.display = "block";
   formContainer.innerHTML = `
-    <h3>Reservando turno con ${selectedProf} a las ${selectedHora}</h3>
+    <h3>Reservando turno con  ${selectedProf} el ${fechaBonita} a las ${selectedHora}</h3>
     <form id="reservaForm">
       <input type="text" name="nombre" placeholder="Nombre" required>
       <input type="text" name="apellido" placeholder="Apellido" required>
