--- a/username.html
+++ b/username.html
@@ -293,7 +293,8 @@
 
   <!-- Logo del usuario -->
   <div class="logo-container" style="largin-left:0px; margin-bottom:20px;">
-    <img id="userLogo" src="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;">
+    <img id="userLogo" src="" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;">
+    <h2>hair-studio</h2>
   </div>
 
   
