--- a/username.html
+++ b/username.html
@@ -293,8 +293,8 @@
 
   <!-- Logo del usuario -->
   <div class="logo-container" style="largin-left:0px; margin-bottom:20px;">
-    <img id="userLogo" src="" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;">
-    <h2>hair-studio</h2>
+      <!--<img id="userLogo" src="" alt="Logo" style="max-width:150px; display:block; margin:0 auto 10px;">-->
+    <h2 id="userLogo" style="text-align:center;" >hair-studio</h2>
   </div>
 
   
